# AI-Autonomous-Systems-for-all-of-my-lippytm.ai-Repositories-Research-and-Development-integration-

./: .gitignore  README.md  config.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ai-autonomous-improvements.yml  ci.yml
config/: config.yaml
src/: __init__.py  orchestrator.py
src/agents/: __init__.py  base_agent.py  code_improvement_agent.py  repository_agent.py  research_agent.py
src/autonomous/: __init__.py  ad_manager.py  bot_manager.py  content_generator.py  research_agent.py  web3_agent.py
src/core/: __init__.py  config.py  logger.py  orchestrator.py
src/integration/: __init__.py  repo_manager.py
src/integrations/: __init__.py  ai_integration.py  github_integration.py
src/quality/: __init__.py  qa_monitor.py
src/utils/: __init__.py  helpers.py
src/web/: app.py
tests/: __init__.py  test_ad_manager.py  test_agents.py  test_bot_manager.py  test_config.py  test_content_generator.py  test_orchestrator.py  test_qa_monitor.py  test_repo_manager.py  test_research_agent.py  test_utils.py  test_web3_agent.py
